# python-project-83

./: .env.example  .gitignore  Makefile  README.md  database.sql  pyproject.toml  sonar-project.properties
.github/workflows/: pyci.yml  sonar.yml
page_analyzer/: app.py  database.py  parser.py
page_analyzer/templates/: 404.html  base.html  index.html
page_analyzer/templates/urls/: index.html  show.html
